next/deployment/templates/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wepush-next
  annotations:
    nginx.ingress.kubernetes.io/proxy-buffering: "off"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "2100"
    nginx.ingress.kubernetes.io/proxy-body-size: "32m"
spec:
  ingressClassName: nginx
  tls:
    - hosts: [wepush.example.com]
      secretName: wepush-next-http-tls
  rules:
    - host: wepush.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wepush-next
                port: { name: http }
